test/arrays/shapes/error-if-non-DR-2.chpl

var DOM: domain(int);

var ARR: [DOM] int;

var PROMO = for idx in 1..3 do ARR;
